--- a/Networkswriteup.tex
+++ b/Networkswriteup.tex
@@ -240,7 +240,6 @@ To statisitically analyse this data I plotted the theoretical fit and naive fit 
 	 	 		\begin{subfigure}{.5\textwidth}
 	 	 			\centering 
 	 	 			\includegraphics[width=\textwidth]{LR-m=4LB.png}
-	 	 			\caption{$m=2$}
 	 	 		\end{subfigure}
 	 	 	}
 	 	   		\caption{The theoretical model(red) and the naive model(black) vs. the log binned, for $m=4$.
@@ -331,7 +330,7 @@ Since we now know how the degree distribution depends on $k$, $m$ and $N$, I can
 	\includegraphics[width=.7\textwidth]{Collapse11.png}
 	\caption{The median for $N=1,2,3,4$ and a naive fit of $k1 \propto \sqrt{N}$ are plotted. The error bars represent $\sqrt{deviation}$ from our most extreme statistics and the  median.}
 \end{figure} 
-\\ First I collapse the probability distribution in k by dividing through by my theoretical prediction:
+First I collapse the probability distribution in k by dividing through by my theoretical prediction:
 \begin{equation}
 	c_k(N)=\frac{p_{data}(k)}{p_{theory}(k)}
 \end{equation}
@@ -340,7 +339,7 @@ Figure 5 shows the outcome of this proccedure.
 	\centering
 	%\includegraphics{figure_1.png}
 	
-	\includegraphics[width=.7\textwidth]{Collapse1.png}
+	\includegraphics[width=.7\textwidth]{Collapse2.png}
 	\caption{The median for $N=1,2,3,4$ and a naive fit of $k1 \propto \sqrt{N}$ are plotted. The error bars represent $\sqrt{deviation}$ from our most extreme statistics and the  median.}
 \end{figure}
 Now I collapse in N. To do this I use the relation I earlier derived of how the $k_1$ scales with $N$. I stretched the degrees observed by a factor of $N^{-\frac{1}{2}}$. Figure 7 shows the full collapse.
@@ -348,7 +347,9 @@ Now I collapse in N. To do this I use the relation I earlier derived of how the 
 	\centering
 	%\includegraphics{figure_1.png}
 	
-	\includegraphics[width=.7\textwidth]{Collapse2.png}
+	\includegraphics[width=.7\textwidth]{Collapse1.png}
 	\caption{The median for $N=1,2,3,4$ and a naive fit of $k1 \propto \sqrt{N}$ are plotted. The error bars represent $\sqrt{deviation}$ from our most extreme statistics and the  median.}
 \end{figure}
+\section{Random Attachement}
+
 \end{document}
